Implement a bit of the new api
